--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>CI CD Demo Page</title>
+</head>
+<body>
+
+<h1>Test page to show CI CD Demo</h1>
+<p>Version 1.0</p>
+
+</body>
+</html>
 
